force-app/main/default/objects/righteous__LightningActionConfiguration__c/righteous__LightningActionConfiguration__c.object-meta.xml
<CustomObject>
    <label>Lightning Action Configuration</label>
    <nameField>
        <label>Lightning Action Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lightning Action Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>