force-app/main/default/objects/righteous__LightningActionConfiguration__c/fields/righteous__DisplayPage__c.field-meta.xml
<CustomField>
    <fullName>righteous__DisplayPage__c</fullName>
    <description>Please select where Action should be displayed. 
App Home Page displays Actions on Lightning Application home pages (Sales, Marketing, etc..). 
Record Page displays Actions on Record Details Pages.</description>
    <inlineHelpText>Please select where Action should be displayed. 
App Home Page displays Actions on Lightning Application home pages (Sales, Marketing, etc..). 
Record Page displays Actions on Record Details Pages.</inlineHelpText>
    <label>Display Page</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>App Home Page</fullName>
            </value>
            <value>
                <fullName>Record Page</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>