force-app/main/default/objects/righteous__LightningActionConfiguration__c/fields/righteous__Label__c.field-meta.xml
<CustomField>
    <fullName>righteous__Label__c</fullName>
    <description>Holds the Text to be displayed on Action Panel on UI. 
Used in association with Label Type. If Label Type is Value then Static Text from current field is displayed. If Label Type is Custom Label, it should hold the API Name of Custom Label.</description>
    <inlineHelpText>Provide Static Text or Custom Label API Name. Text will be displayed on Action Panel Header.</inlineHelpText>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>