force-app/main/default/objects/righteous__LightningActionConfiguration__c/fields/righteous__Label_Type__c.field-meta.xml
<CustomField>
    <fullName>righteous__Label_Type__c</fullName>
    <description>Type of Text to be displayed on Action Panel Header.</description>
    <inlineHelpText>Type of Text is being used to be displayed on Action Panel Header. Select &apos;Value&apos; if Static Text is going to be used for Label. Select &apos;Custom Label&apos; if header text is coming from System Labels.</inlineHelpText>
    <label>Label Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value</fullName>
            </value>
            <value>
                <fullName>Custom Label</fullName>
            </value>
            <value>
                <fullName>Lightning Label</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>