force-app/main/default/objects/righteous__LightningActionConfiguration__c/fields/righteous__LightningApplicationName__c.field-meta.xml
<CustomField>
    <fullName>righteous__LightningApplicationName__c</fullName>
    <description>Lightning Application Name is mandatory if Display Page is selected as &apos;App Home Page&apos;. App Master Label is to be copied here (not translated label).
Ex: Sales, Marketing, Sales Console etc.</description>
    <inlineHelpText>Lightning Application Name is mandatory if Display Page is selected as &apos;App Home Page&apos;. App Master Label is to be copied here (not translated label).
Ex: Sales, Marketing, Sales Console etc.</inlineHelpText>
    <label>Lightning Application Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>