force-app/main/default/objects/righteous__LightningActionConfiguration__c/fields/righteous__LightningLabel__c.field-meta.xml
<CustomField>
    <fullName>righteous__LightningLabel__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Associate a Lightning Label to be displayed as Header Text on UI component. Lightning Label can have translated value.</inlineHelpText>
    <label>Lightning Label</label>
    <referenceTo>righteous__LightningLabel__c</referenceTo>
    <relationshipLabel>Lightning Action Configurations</relationshipLabel>
    <relationshipName>LightningActionConfigurations</relationshipName>
    <type>Lookup</type>
</CustomField>