force-app/main/default/objects/righteous__LightningActionConfiguration__c/fields/righteous__Object__c.field-meta.xml
<CustomField>
    <fullName>righteous__Object__c</fullName>
    <description>Picklist holds the Object API Name values. Add new Object API Name as Picklist value in case you&apos;re going to use Lightning Action on Record Page.</description>
    <inlineHelpText>Select the Object API Name. Actions will be displayed on given Object&apos;s Lightning Record Page.</inlineHelpText>
    <label>Object</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Campaign</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>User</fullName>
                <label>Current User</label>
            </value>
            <value>
                <fullName>Blood_Test_Booking__c</fullName>
                <label>Blood Test</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>