force-app/main/default/objects/righteous__LightningActionConfiguration__c/validationRules/righteous__Validate_Label_Type_and_Label_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>righteous__Validate_Label_Type_and_Label_Value</fullName>
    <active>true</active>
    <description>If Label Type is selected, validate if Label Value is provided.</description>
    <errorConditionFormula>AND (
NOT(ISPICKVAL( righteous__Label_Type__c, &apos;&apos; )),
ISBLANK( righteous__Label__c ) 
)</errorConditionFormula>
    <errorDisplayField>righteous__Label__c</errorDisplayField>
    <errorMessage>You must provide value for Label when Label Type is selected.</errorMessage>
</ValidationRule>