force-app/main/default/objects/righteous__LightningActionConfiguration__c/listViews/allSelection_LightningActionConfiguration.listView-meta.xml
<ListView>
    <fullName>allSelection_LightningActionConfiguration</fullName>
    <filterScope>Queue</filterScope>
    <label>allSelection</label>
    <queue>allSelection</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>