force-app/main/default/objects/righteous__LightningActionConfiguration__c/listViews/righteous__All.listView-meta.xml
<ListView>
    <fullName>righteous__All</fullName>
    <columns>NAME</columns>
    <columns>righteous__Object__c</columns>
    <columns>righteous__DisplayPage__c</columns>
    <columns>righteous__LightningApplicationName__c</columns>
    <columns>righteous__Active__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>